Added getEventDate and getUsers implementation